<resources>
    <string name="app_name">kebook</string>
    <!--Pantalla login-->
    <string name="input_usr">usuari</string>
    <string name="input_pwd">contrasenya</string>
    <string name="lbl_email">Correu d\'usuari</string>
    <string name="lbl_pwd">Contrasenya</string>
    <string name="btn_login">login</string>
    <string name="registre">registre</string>
    <string name="switchAdmin">Soc admin</string>

    <!--Dash usuari-->
    <string name="benvingut_user">Benvingut usuari</string>

    <!--Dash admin-->
    <string name="benvingut_admin">Benvingut admin</string>

    <!--Menu items-->
    <string name="delete_account">Eliminar compte</string>
    <string name="change_pass">Canviar contrasenya</string>
    <string name="admin_tools">Eines admin</string>
    <string name="comfirm_check_book">Confirmar prèstec</string>
    <string name="users_info">Info usuaris</string>
    <string name="confirm_return_book">Confirmar devolucions</string>
    <string name="book_management">Gestio de llibres</string>
    <string name="delete_user">Eliminar usuari</string>

    <!--Pantalla registre-->
    <string name="pantalla_registre">Pantalla de registre</string>
    <string name="btn_registrar">Registrar</string>
    <string name="lbl_usr_reg">Usuari</string>
    <string name="lbl_mail_reg">Correu</string>
    <string name="lbl_pass_reg">Contrasenya</string>
    <string name="tancar_sessio">Tancar sessio</string>
    <string name="id">Id</string>
    <string name="nom">Nom</string>
    <string name="email">Email</string>
    <string name="data_creacio">Data de creació</string>
    <string name="is_admin">Es admin</string>
    <string name="btn_filter">Filtre</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_delete_user">Eliminar</string>
    <string name="insereix_la_nova_contrasenya">Insereix la teva contrasenya</string>
    <string name="btn_apply_filter">Filtrar</string>
    <string name="by_author">Escritor</string>
    <string name="by_tittle">Titol</string>
    <string name="lbl_filter_option">Selecciona el filtre al menu</string>
    <string name="btn_book_list">Llibres</string>
    <string name="btn_users_list">Usuaris</string>
    <string name="btn_add_book">+ Llibre</string>
    <string name="isbn">ISBN</string>
    <string name="titulo">Titol</string>
    <string name="autor">Autor</string>
    <string name="genero">Gènere</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="afegir">Afegir</string>
    <string name="disponible">Disponible?</string>
    <string name="btn_book_Book">Reservar</string>
    <string name="btn_resena">Ressenya</string>
    <string name="btn_confirm_return">Confir. devolución</string>
    <string name="btn_confirm_check_out">Confir. recogida</string>
    <string name="hay_reservas_book">Hay reservas?</string>
    <string name="resena">Ressenya</string>
    <string name="btn_publicar_resena">Publicar</string>
    <string name="btn_proponer_evento">Esdeveniment</string>
    <string name="btn_select_fecha_evento">Seleccionar fecha</string>


</resources>